--- a/VismaBlazor/VismaBlazor.Client/VismaBlazor.Client.csproj
+++ b/VismaBlazor/VismaBlazor.Client/VismaBlazor.Client.csproj
@@ -10,7 +10,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Radzen.Blazor" Version="4.24.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Pages\" />
   </ItemGroup>
 
 </Project>
