--- a/VismaBlazor/VismaBlazor/VismaBlazor.csproj
+++ b/VismaBlazor/VismaBlazor/VismaBlazor.csproj
@@ -10,6 +10,7 @@
     <ProjectReference Include="..\VismaBlazor.Client\VismaBlazor.Client.csproj" />
     <PackageReference Include="CsvHelper" Version="31.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.1" />
+    <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Radzen.Blazor" Version="4.24.7" />
   </ItemGroup>
