--- a/VismaBlazor/VismaBlazor/appsettings.json
+++ b/VismaBlazor/VismaBlazor/appsettings.json
@@ -6,5 +6,12 @@
     }
   },
   "AllowedHosts": "*",
-  "FileStorage": "D:\\Temp\\Storage"
+  "FileStorage": "D:\\Temp\\Storage",
+  "auth0": {
+    "Domain": "dev-mfpashiwkekjyu0q.eu.auth0.com",
+    "ClientId": "2sCIH9Zp9S1hJl9IwwPT1TIjtOpZb43d",
+    "ClientSecret": "VSoNs10RTe9usOd3NCgR3rwRS04whe_OuJ2XFmJpK7vslw9Yocti7jxpfwKqOcPb",
+    "CallbackUrl": "https://localhost:7042/callback",
+    "PostLogoutRedirectUri": "https://localhost:7042/"
+  }
 }
