--- a/VismaBlazor/VismaBlazor/VismaBlazor.csproj
+++ b/VismaBlazor/VismaBlazor/VismaBlazor.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\images\undraw_data_processing_yrrv.svg" />
+    <None Include="wwwroot\images\undraw_personal_data_re_ihde.svg" />
+    <None Include="wwwroot\images\user-group-17.png" />
+    <None Include="wwwroot\images\usergroup.svg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\VismaBlazor.Client\VismaBlazor.Client.csproj" />
     <PackageReference Include="CsvHelper" Version="31.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.1" />
