pre presentasjon push

--- a/VismaBlazor/VismaBlazor/appsettings.json
+++ b/VismaBlazor/VismaBlazor/appsettings.json
@@ -12,7 +12,7 @@
     "ClientId": "2sCIH9Zp9S1hJl9IwwPT1TIjtOpZb43d",
     "ClientSecret": "VSoNs10RTe9usOd3NCgR3rwRS04whe_OuJ2XFmJpK7vslw9Yocti7jxpfwKqOcPb",
     "Audience": "https://vismaapi-d8eec0554dca.herokuapp.com/",
-    "CallbackUrl": "https://vismablazor-c87e68b7fc2c.herokuapp.com/callback",
-    "PostLogoutRedirectUri": "https://vismablazor-c87e68b7fc2c.herokuapp.com/"
+    "CallbackUrl": "https://localhost:7042/callback",
+    "PostLogoutRedirectUri": "https://localhost:7042"
   }
 }
