--- a/VismaBlazor/VismaBlazor.Client/VismaBlazor.Client.csproj
+++ b/VismaBlazor/VismaBlazor.Client/VismaBlazor.Client.csproj
@@ -9,6 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\images\undraw_data_processing_yrrv.svg" />
+    <Content Remove="wwwroot\images\undraw_personal_data_re_ihde.svg" />
+    <Content Remove="wwwroot\images\user-group-17.png" />
+    <Content Remove="wwwroot\images\usergroup.svg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="CsvHelper" Version="31.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
@@ -18,6 +25,13 @@
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Pages\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\images\undraw_data_processing_yrrv.svg" />
+    <None Include="wwwroot\images\undraw_personal_data_re_ihde.svg" />
+    <None Include="wwwroot\images\user-group-17.png" />
+    <None Include="wwwroot\images\usergroup.svg" />
   </ItemGroup>
 
 </Project>
