--- a/VismaBlazor/VismaBlazor/appsettings.json
+++ b/VismaBlazor/VismaBlazor/appsettings.json
@@ -8,9 +8,9 @@
   "AllowedHosts": "*",
   "FileStorage": "D:\\Temp\\Storage",
   "auth0": {
-    "Domain": "dev-mfpashiwkekjyu0q.eu.auth0.com",
-    "ClientId": "2sCIH9Zp9S1hJl9IwwPT1TIjtOpZb43d",
-    "ClientSecret": "VSoNs10RTe9usOd3NCgR3rwRS04whe_OuJ2XFmJpK7vslw9Yocti7jxpfwKqOcPb",
+    "Domain": "dev-w1a7krqsjd0h8l3c.eu.auth0.com",
+    "ClientId": "tNSueskP5AFE8BuAl1POQCipnMSklGem",
+    "ClientSecret": "8i38ZbdofjyUrshXDXmTP9GzhTd8yWq6Tt2BkIXCyeL4h-Tb37pCIIkpSEE4MSoM",
     "Audience": "https://vismaapi-d8eec0554dca.herokuapp.com/",
     "CallbackUrl": "https://www.datagenerator.no/callback",
     "PostLogoutRedirectUri": "https://www.datagenerator.no/"
