--- a/VismaBlazor/VismaBlazor/appsettings.json
+++ b/VismaBlazor/VismaBlazor/appsettings.json
@@ -12,7 +12,7 @@
     "ClientId": "MjN0f4YmcxVGSOnE5dVDThLpWQ4SvtTQ",
     "ClientSecret": "0RT3j9wiZD316OcmLiv8dE0Hg5dOMnpfPVh9SD6veWMQNSJ6iEKpgBnxwFG_6Yxj",
     "Audience": "https://vismaapi-d8eec0554dca.herokuapp.com/",
-    "CallbackUrl": "http://www.datagenerator.no/callback",
-    "PostLogoutRedirectUri": "http://www.datagenerator.no/"
+    "CallbackUrl": "https://vismablazor-c87e68b7fc2c.herokuapp.com/callback",
+    "PostLogoutRedirectUri": "https://vismablazor-c87e68b7fc2c.herokuapp.com/"
   }
 }
