det fungerte alt som mangler er bildefix for hosted version

--- a/VismaBlazor/VismaBlazor/appsettings.json
+++ b/VismaBlazor/VismaBlazor/appsettings.json
@@ -8,9 +8,9 @@
   "AllowedHosts": "*",
   "FileStorage": "D:\\Temp\\Storage",
   "auth0": {
-    "Domain": "dev-w1a7krqsjd0h8l3c.eu.auth0.com",
-    "ClientId": "tNSueskP5AFE8BuAl1POQCipnMSklGem",
-    "ClientSecret": "8i38ZbdofjyUrshXDXmTP9GzhTd8yWq6Tt2BkIXCyeL4h-Tb37pCIIkpSEE4MSoM",
+    "Domain": "dev-mfpashiwkekjyu0q.eu.auth0.com",
+    "ClientId": "MjN0f4YmcxVGSOnE5dVDThLpWQ4SvtTQ",
+    "ClientSecret": "0RT3j9wiZD316OcmLiv8dE0Hg5dOMnpfPVh9SD6veWMQNSJ6iEKpgBnxwFG_6Yxj",
     "Audience": "https://vismaapi-d8eec0554dca.herokuapp.com/",
     "CallbackUrl": "https://vismablazor-c87e68b7fc2c.herokuapp.com/callback",
     "PostLogoutRedirectUri": "https://vismablazor-c87e68b7fc2c.herokuapp.com/"
