--- a/VismaBlazor/VismaBlazor/VismaBlazor.csproj
+++ b/VismaBlazor/VismaBlazor/VismaBlazor.csproj
@@ -7,13 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="wwwroot\images\undraw_data_processing_yrrv.svg" />
-    <None Include="wwwroot\images\undraw_personal_data_re_ihde.svg" />
-    <None Include="wwwroot\images\user-group-17.png" />
-    <None Include="wwwroot\images\usergroup.svg" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\VismaBlazor.Client\VismaBlazor.Client.csproj" />
     <PackageReference Include="Auth0.AspNetCore.Authentication" Version="1.4.1" />
     <PackageReference Include="CsvHelper" Version="31.0.1" />
@@ -21,6 +14,7 @@
     <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Radzen.Blazor" Version="4.24.7" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.19.0" />
   </ItemGroup>
 
 </Project>
