--- a/VismaBlazor/VismaBlazor/VismaBlazor.csproj
+++ b/VismaBlazor/VismaBlazor/VismaBlazor.csproj
@@ -10,11 +10,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\images\**" />
+    <Content Remove="wwwroot\images\**" />
+    <EmbeddedResource Remove="wwwroot\images\**" />
+    <None Remove="wwwroot\images\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\VismaBlazor.Client\VismaBlazor.Client.csproj" />
-    <None Include="wwwroot\images\undraw_data_processing_yrrv.svg" />
-    <None Include="wwwroot\images\undraw_personal_data_re_ihde.svg" />
-    <None Include="wwwroot\images\user-group-17.png" />
-    <None Include="wwwroot\images\usergroup.svg" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,6 +30,10 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Radzen.Blazor" Version="4.24.7" />
     <PackageReference Include="Selenium.WebDriver" Version="4.19.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\bilder\" />
   </ItemGroup>
 
 </Project>
