--- a/VismaBlazor/VismaBlazor/VismaBlazor.csproj
+++ b/VismaBlazor/VismaBlazor/VismaBlazor.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -17,11 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\VismaBlazor.Client\VismaBlazor.Client.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\VismaBlazor.Client\VismaBlazor.Client.csproj" />
+    <ProjectReference Include="..\VismaBlazor\VismaBlazor.csproj" />
     <PackageReference Include="Auth0.AspNetCore.Authentication" Version="1.4.1" />
     <PackageReference Include="CsvHelper" Version="31.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.1" />
